Adding some clarifications from LeetCode practice.

--- a/SQL/Indexes, Keys, and Constraints.ipynb
+++ b/SQL/Indexes, Keys, and Constraints.ipynb
@@ -777,6 +777,37 @@
     "FROM Orders o\n",
     "JOIN Customers c ON o.customer_id = c.customer_id;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bc6818c",
+   "metadata": {},
+   "source": [
+    "# How Indices Actually Work\n",
+    "\n",
+    "1. You can think of a composite index as __appending the columns__ in the order specified in the index.\n",
+    "    -  eg. if you index on __(column1, column2, column3)__, then the indexed value is the concatenating of those 3 columns in that order\n",
+    "1. Internally, the index is basically a __binary search tree__, like a sorted map or set in Java.\n",
+    "    - it is O(logn) lookup, not O(1) (even for simple things like getting a single item by ID)\n",
+    "    - hash-based O(1) indexing is uncommon in relational databases (more common in NoSQL)\n",
+    "1. If an operation doesn't benefit from the indexing, then it just becomes a __sequential search__ (O(n))\n",
+    "1. An operation that searches or sorts can benefit from the indexing if you __use the columns in order__ with no other columns interveaning\n",
+    "    - eg. if the index has __(column1, column2, column3)__, then you can search or sort by column1+column2, column1+column2+column3, or just column1, but not column2+column3 or just column2 or column3.\n",
+    "1. This order applies across the whole query in certain places\n",
+    "    - eg. you might use column1 and column2 in the WHERE clause and column3 in the ORDER BY clause which comes later\n",
+    "1. It is ok to have a composite index that uses a subset of a __composite primary key__ (indexing is independent of primary keys)\n",
+    "1. You can have multiple indices combined in various ways to support the queries you need\n",
+    "   - but you might end up needing multiple denormalized tables or something if you can't arrange the phases efficiently\n",
+    "1. You can use the SQL `EXPLAIN` command to see how it queries the index for a given query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea2dcbdb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
