--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1909,9 +1909,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ed03443",
+   "metadata": {},
+   "source": [
+    "# Last Value Seen by For Loop\n",
+    "\n",
+    "Unlike a for loop in other languages, the Python for loop leaves the loop variable set to the last in-loop value, rather than the next value. This is counterintuitive and something to be careful of.\n",
+    "\n",
+    "The reason it happens is because it's iterating over the range and not setting the variable when `StopIteration` is thrown."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "18f9281f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "9\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(i)\n",
+    "print(i)\n",
+    "\n",
+    "for num in [1, 2, 3]:\n",
+    "    pass\n",
+    "print(num)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f22d1bc0",
+   "id": "68826032",
    "metadata": {},
    "outputs": [],
    "source": []
