--- a/python/Collections Tips.ipynb
+++ b/python/Collections Tips.ipynb
@@ -1023,9 +1023,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "24d534af",
+   "metadata": {},
+   "source": [
+    "# Some Slice Patterns to Know"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "28a75441",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reverse copy: [5, 4, 3, 2, 1]\n",
+      "reversed in place: [5, 4, 3, 2, 1]\n",
+      "reversed end region in-place: [5, 4, 1, 2, 3]\n",
+      "reversed section in-place: [5, 4, 2, 1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "print('reverse copy:', l[::-1])\n",
+    "l[:] = l[::-1]\n",
+    "print('reversed in place:', l)\n",
+    "\n",
+    "l[2:] = l[:1:-1]\n",
+    "print('reversed end region in-place:', l)\n",
+    "\n",
+    "l[2:4] = l[3:1:-1]\n",
+    "print('reversed section in-place:', l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e19d56ac",
+   "metadata": {},
+   "source": [
+    "# Slicing Performance\n",
+    "\n",
+    "- intuitively, you would expect slicing to be much slower than carrying indices around due to making a copy\n",
+    "   - but in LC, I've consistently found that it's either faster or doesn't matter\n",
+    "   - so slice away - it seems to be fine\n",
+    "- one thing that does seem to matter is using negative indices\n",
+    "   - noticeably slower performance (though only by constant factor due to the calculation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15aa5ec8",
+   "metadata": {},
+   "source": [
+    "# Special 'in' Tricks\n",
+    "\n",
+    "This is very idiomatic to do in Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "96fd9185",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "operator\n",
+      "exponent\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = '+'\n",
+    "if c in '+-*/':\n",
+    "    print('operator')\n",
+    "c = 'e'\n",
+    "if c in 'eE':\n",
+    "    print('exponent')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16606dfd",
+   "metadata": {},
+   "source": [
+    "# Key and Value in Comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2f90a690",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydict = {'a': 1, 'b': 2, 'c': 3}\n",
+    "def f(key):\n",
+    "    return key == 'a' or key == 'c'\n",
+    "\n",
+    "vals_with_matching_key = [value for key,value in mydict.items() if f(key)]\n",
+    "\n",
+    "print(vals_with_matching_key)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c715ed21",
+   "id": "c5ae24c1",
    "metadata": {},
    "outputs": [],
    "source": []
