More research items from LC practice.

--- a/python/Collections Tips.ipynb
+++ b/python/Collections Tips.ipynb
@@ -1142,9 +1142,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0e9841b",
+   "metadata": {},
+   "source": [
+    "# Hashability of Collections\n",
+    "\n",
+    "Only the __immutable__ collections are hashable (and thus usable as set and dictionary members).\n",
+    "\n",
+    "Even though `object` is hashable, the mutable built-in collections throw `TypeError` when you try to hash them.\n",
+    "\n",
+    "Workarounds:\n",
+    "1. Convert as shown below\n",
+    "2. Use a wrapper class that hashes however you want\n",
+    "\n",
+    "This prevents things like changing a key's members after it's already been hashed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "11f67c23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "133146708735736\n",
+      "-3550055125485641917\n",
+      "6238738944859869085\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(hash({'a': 1, 'b': 2})) # TypeError\n",
+    "#print(hash(set())) # TypeError\n",
+    "#print(hash([1, 2, 3])) # TypeError\n",
+    "\n",
+    "print(hash(frozenset(set())))\n",
+    "print(hash((1, 2,)))\n",
+    "\n",
+    "print(hash(tuple({'a': 1, 'b': 2}.items())))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5ae24c1",
+   "id": "0995ab6e",
    "metadata": {},
    "outputs": [],
    "source": []
