--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -752,7 +752,9 @@
     "\n",
     "It does not get `__hash__` unless you pass `frozen=True` which makes it __read-only__.\n",
     "\n",
-    "Operators like `<` are not supported by default."
+    "Operators like `<` are not supported by default.\n",
+    "\n",
+    "NOTE: to use `**` on the members, you can use `dataclasses.asdict()` to convert it to a dictionary."
    ]
   },
   {
@@ -1420,9 +1422,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48ce1a49",
+   "metadata": {},
+   "source": [
+    "# Spread Operator Implementation\n",
+    "\n",
+    "`*` tries to iterate over the collection\n",
+    "\n",
+    "`**` tries to iterate to get keys and use `[]` to get values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d409d7e2",
+   "id": "dee2995f",
    "metadata": {},
    "outputs": [],
    "source": []
