--- a/python/Web Backend.ipynb
+++ b/python/Web Backend.ipynb
@@ -235,6 +235,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "55b285f5",
+   "metadata": {},
+   "source": [
+    "# Query Params\n",
+    "\n",
+    "`request.args.get(name)` to get query params (which you do not specify in the url route).\n",
+    "\n",
+    "In the url, you pass them as `?param1=value1&param2=value2&param3=value3`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9b51836",
+   "metadata": {},
+   "source": [
+    "# Types in Url Params\n",
+    "\n",
+    "Note that above, the type was specified as `int`, but that is not referring to Python's `int`.  It is the name of a Flask __converter__.  A lot of the time they match, but not always.  For instance, you would use `string` rather than `str` for a string value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca5629b6",
+   "metadata": {},
+   "source": [
+    "# No Content Return\n",
+    "\n",
+    "Returning `''` should make Flask put no body, but the recommended return code for no body is 204.\n",
+    "\n",
+    "For instance, if a PUT or POST request where there is no information the caller needs after the operation is performed (such as they never need the ID because it's internal only)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dbf2e6f8",
    "metadata": {},
    "source": [
@@ -671,6 +705,20 @@
     "- [GET plural](http://127.0.0.1:5001/items)\n",
     "\n",
     "The object you POST or PUT should have a `data` field set to a `string` value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cabce32",
+   "metadata": {},
+   "source": [
+    "## Transactions\n",
+    "\n",
+    "SQLAlchemy is __transactional by default__.  Before you call `db.session.commit()`, everything you do is part of a transaction.  If you want to be more explicit about it, you can start the transaction with `db.session.begin()`.\n",
+    "\n",
+    "Queries against tables you changed in a transaction but haven't commited yet will transparently return the altered version of the data as if the transaction has gone through.  This allows you to do multi-table computations transactionally.\n",
+    "\n",
+    "Primary key __auto-incrementing__ also happens behind the scenes transparently in a transactional way."
    ]
   },
   {
