--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -2017,9 +2017,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43a6f103",
+   "metadata": {},
+   "source": [
+    "# Modulo and Division with Negatives\n",
+    "\n",
+    "Besides not having the truncating division operator, JS pretty much follows C++ and Java (instead of Python) when it comes to `%` and `Math.floor()`.\n",
+    "\n",
+    "`-1 % x = -1` (negate and symmetric, instead of cyclical)\n",
+    "\n",
+    "`x % -y = x % y` (ignored negative on right)\n",
+    "\n",
+    "`Math.floor()` truncates towards __negative infinity__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8b03ee66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "1\n",
+      "-1\n",
+      "-2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    console.log(-1 % 5);\n",
+    "    console.log(1 % -5);\n",
+    "    console.log(-1 % -5);\n",
+    "    console.log(Math.floor(-1.2));\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2225a769",
+   "id": "86d8e25f",
    "metadata": {},
    "outputs": [],
    "source": []
