--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1956,9 +1956,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4d457195",
+   "metadata": {},
+   "source": [
+    "# Modulo and Division with Negatives\n",
+    "\n",
+    "Python is unusual compared to other languages (JavaScript, Java, C++) when it comes to the % operator. The values continue downward in the same cycle so that -1 % x = x - 1 (instead of -1 like other languages).\n",
+    "\n",
+    "x % -y is less consistent - in Jupyter the negative is ignored in that case (like other languages do), but in the python shell it does a different more complicated thing.  Because it has the ability to be different, it's better to not rely on what it does.\n",
+    "\n",
+    "`//` and `math.floor` both truncate toward __negative infinity__, making `//` not a perfect match for the floor division used in other languages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "38bcb633",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 5 0\n",
+      "9 5 4\n",
+      "8 5 3\n",
+      "7 5 2\n",
+      "6 5 1\n",
+      "5 5 0\n",
+      "4 5 4\n",
+      "3 5 3\n",
+      "2 5 2\n",
+      "1 5 1\n",
+      "0 5 0\n",
+      "-1 5 4\n",
+      "-2 5 3\n",
+      "-3 5 2\n",
+      "-4 5 1\n",
+      "-5 5 0\n",
+      "-6 5 4\n",
+      "-7 5 3\n",
+      "-8 5 2\n",
+      "-9 5 1\n",
+      "-10 5 0\n",
+      "\n",
+      "10 -5 0\n",
+      "9 -5 4\n",
+      "8 -5 3\n",
+      "7 -5 2\n",
+      "6 -5 1\n",
+      "5 -5 0\n",
+      "4 -5 4\n",
+      "3 -5 3\n",
+      "2 -5 2\n",
+      "1 -5 1\n",
+      "0 -5 0\n",
+      "-1 -5 4\n",
+      "-2 -5 3\n",
+      "-3 -5 2\n",
+      "-4 -5 1\n",
+      "-5 -5 0\n",
+      "-6 -5 4\n",
+      "-7 -5 3\n",
+      "-8 -5 2\n",
+      "-9 -5 1\n",
+      "-10 -5 0\n",
+      "\n",
+      "-1\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "for i in range(10, -11, -1):\n",
+    "    print(i, 5, i % 5)\n",
+    "print()\n",
+    "for i in range(10, -11, -1):\n",
+    "    print(i, -5, i % 5)\n",
+    "print()\n",
+    "print(-1 // 5)\n",
+    "print(math.floor(-1.2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68826032",
+   "id": "3a92148b",
    "metadata": {},
    "outputs": [],
    "source": []
