--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -2069,9 +2069,262 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "322e7e37",
+   "metadata": {},
+   "source": [
+    "# Caveats about JavaScript Numbers\n",
+    "\n",
+    "JavaScript has some __unique and weird behavior__ with regard to bitwise and arithmetic operators and numbers.  The cause of this weirdness is the fact that it combines __two concepts in one__: integers and floating pointer numbers, whereas even Python has two distinct types for that.\n",
+    "\n",
+    "The deeper concepts at play here are:\n",
+    "1. Internally, JS uses 64-bit IEEE floating point numbers with a 52-bit mantissa (plus 1 implied bit based on exponent) and 1 sign bit\n",
+    "1. Specifically for bitwise operators, it temporarily converts the number to 32-bit, does the operation, and goes back to floating pointer for the result\n",
+    "1. To apply a bitwise operator, a non-integral number is floor __truncated toward zero__ (not to negative infinity like `Math.floor`) (with the sign being handled on its own separately)\n",
+    "1. To apply a bitwise operator to an integer larger than 32-bit, JS first makes a signed binary 2's complement integer out of the number and then truncates to 32-bits\n",
+    "   - note, `x | 0` effectively applies the truncation for you and then back to floating point\n",
+    "1. Single bit shift operations of more than 31 bits automatically wrap the bits around, but multiple chained shift operations don't coordinate like this (bits can be lost like you'd expect)\n",
+    "1. Mixed operations will convert back and forth\n",
+    "1. The safe range, where you can do +1 and -1 on integers and get correct results, is -2^53-1 to 2^53-1.  But you can represent numbers much larger than that and much smaller than 1 - just without the accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "c6d8c19e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32-bit\n",
+      "-2147483648\n",
+      "-1073741824\n",
+      "-1073741823\n",
+      "\n",
+      "wrap\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "0\n",
+      "2\n",
+      "\n",
+      "bitwise float\n",
+      "4\n",
+      "-4\n",
+      "-4\n",
+      "\n",
+      "arithmetic\n",
+      "4294967296\n",
+      "4294967297\n",
+      "\n",
+      "mixed\n",
+      "-2147483649\n",
+      "\n",
+      "upper bits\n",
+      "4611686018427388000\n",
+      "4611686018427388000\n",
+      "9223372036854776000\n",
+      "18446744073709552000\n",
+      "36893488147419103000\n",
+      "36893488147419103000\n",
+      "\n",
+      "safe\n",
+      "\n",
+      "negative\n",
+      "0\n",
+      "-2147483648\n",
+      "0\n",
+      "-4\n",
+      "\n",
+      "large\n",
+      "0\n",
+      "-2147483648\n",
+      "-2147483648\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    // bitwise operations treated as 32-bit signed integer\n",
+    "    console.log('32-bit');\n",
+    "    let x = 1 << 31;\n",
+    "    console.log(x);\n",
+    "    x = x | 1 << 30;\n",
+    "    console.log(x);\n",
+    "    console.log(x+1);\n",
+    "    console.log();\n",
+    "    \n",
+    "    // shifting wraps around (sometimes)\n",
+    "    console.log('wrap');\n",
+    "    x = 1 << 32;\n",
+    "    console.log(x); // wrap\n",
+    "    x = 1 << 33;\n",
+    "    console.log(x); // wrap\n",
+    "    x = 1 << 31;\n",
+    "    x = x << 1;\n",
+    "    console.log(x); // no wrap\n",
+    "    console.log(1 << 31 << 1); // no wrap\n",
+    "    console.log(1 << 32 << 1); // wrap\n",
+    "    console.log();\n",
+    "    \n",
+    "    // float truncated toward zero (not like Math.floor()!) and sign applied last\n",
+    "    console.log('bitwise float');\n",
+    "    x = 1.7 << 2;\n",
+    "    console.log(x);\n",
+    "    x = -1.3 << 2;\n",
+    "    console.log(x);\n",
+    "    x = -1.3;\n",
+    "    console.log(x << 2);\n",
+    "    console.log();\n",
+    "    \n",
+    "    // arithmetic more than 32-bit\n",
+    "    console.log('arithmetic');\n",
+    "    x = 2 ** 32; // didn't wrap!\n",
+    "    console.log(x);\n",
+    "    console.log(x + 1);\n",
+    "    console.log();\n",
+    "    \n",
+    "    // mixed operations\n",
+    "    console.log('mixed');\n",
+    "    console.log((1 << 31) - 1); // shouldn't be negative, but it is\n",
+    "    console.log();\n",
+    "    \n",
+    "    // upper bits\n",
+    "    console.log('upper bits');\n",
+    "    console.log((1 << 31) * (1 << 31));\n",
+    "    console.log((2**62));\n",
+    "    console.log(2**63);\n",
+    "    console.log(2**64);\n",
+    "    console.log(2**65); // actually works (but lost accuracy)\n",
+    "    console.log(2**65 - 1); // looks the same because the accuracy is gone\n",
+    "    console.log();\n",
+    "    \n",
+    "    // safe range for integers\n",
+    "    console.log('safe');\n",
+    "    // console.log(Number.MAX_SAFE_INTEGER); // not supported in Jupyter\n",
+    "    // console.log(Number.MIN_SAFE_INTEGER); // not supported in Jupyter\n",
+    "    console.log();\n",
+    "    \n",
+    "    // negative numbers\n",
+    "    console.log('negative');\n",
+    "    x = -(2**31);\n",
+    "    console.log(x << 2);\n",
+    "    console.log(x | 0);\n",
+    "    console.log((x | 0) << 2);\n",
+    "    console.log((-1) << 2);\n",
+    "    console.log();\n",
+    "    \n",
+    "    // large integers\n",
+    "    console.log('large');\n",
+    "    x = 2**32; // need a 33-bit integer to represent this\n",
+    "    x = x | 0; // temporarily convert to 32-bit and back again to see what it does\n",
+    "    console.log(x); // the bit is lost\n",
+    "    x = 2**31;\n",
+    "    console.log(x | 0); // the bit is there because 32-bit number\n",
+    "    x = -(2**31);\n",
+    "    console.log(x | 0); // the bit is there but the sign is lost\n",
+    "    console.log();\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fbdba7f",
+   "metadata": {},
+   "source": [
+    "# BigInt\n",
+    "\n",
+    "`BigInt` doesn't work in the version of JS used by this Jupyter kernel.\n",
+    "\n",
+    "1. Literals look like this `1n`, `13412341242352324234234n`, etc.\n",
+    "1. To convert a normal number to a `BigInt`, use it as a function: `const b = BigInt(1);`\n",
+    "    - be careful of converting a number that's already been truncated or lost precision as a float\n",
+    "1. You can do the usual operations on `BigInt` instances, but you __cannot directly mix__ with regular numbers.\n",
+    "    - even for simple things like exponentiation\n",
+    "1. Bitwise operations work on `BigInt` without any weird truncation, so you could use it if you need __64-bit masks__ for instance\n",
+    "1. The range is virtually unlimited because it adds storage as needed.\n",
+    "1. Converting `number` to `BigInt` will throw an error if not integral\n",
+    "1. You can convert to number with `Number(b)` or `+b`, and it will not throw if the number is too large.\n",
+    "   - might lose accuracy, become infinity, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79a759c6",
+   "metadata": {},
+   "source": [
+    "# Boxed Types as Functions vs. As constructors\n",
+    "\n",
+    "The built-in boxed types, like `Number`, `String`, `BigInt`, etc. have a special ability that other classes do not - they can be used either as a __function or a constructor__.\n",
+    "\n",
+    "If used as a function, they do a conversion.\n",
+    "\n",
+    "If used as a constructor, they construct the boxed type (and leave it at that type instead of unboxing to a primitive).  You almost never want to do this.\n",
+    "\n",
+    "NOTE: the lowercase (non-boxed) versions cannot be used either way directly (unless in a TS annotation), despite the fact that `typeof` returns that type as a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "45362357",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.2\n",
+      "NaN\n",
+      "Infinity\n",
+      "5.2\n",
+      "\n",
+      "[Number: 5.2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    console.log(Number('5.2'));\n",
+    "    console.log(Number('bob')); // NaN, just like parseInt() would do\n",
+    "    console.log(Number('Infinity'));\n",
+    "    \n",
+    "    console.log(String(5.2));\n",
+    "    \n",
+    "    console.log();\n",
+    "    console.log(new Number('5.2'));\n",
+    "    \n",
+    "    // console.log(number('5.2')); // ILLEGAL\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86d8e25f",
+   "id": "2f07b5a5",
    "metadata": {},
    "outputs": [],
    "source": []
