Applying string-related JS research items.

--- a/typescript/Strings and Printing.ipynb
+++ b/typescript/Strings and Printing.ipynb
@@ -986,9 +986,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb111fa0",
+   "metadata": {},
+   "source": [
+    "# Comparisons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "52306209",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "false\n",
+      "true\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    console.log('hi' === 'hi'); // value equality\n",
+    "    console.log('abc' < 'ab'); // lexographical\n",
+    "    \n",
+    "    const c = '4';\n",
+    "    console.log(c > '0' && c < '9'); // lexographical helps avoid ascii conversion\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50a3333f",
+   "id": "289dcaaf",
    "metadata": {},
    "outputs": [],
    "source": []
