--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -1582,7 +1582,9 @@
    "id": "8433557d",
    "metadata": {},
    "source": [
-    "# Spread Operator"
+    "# Spread Operator\n",
+    "\n",
+    "Works on anything __iterable__ (inc. set, etc.)"
    ]
   },
   {
