Adding a few Java notes.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -3188,9 +3188,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e1485c61",
+   "metadata": {},
+   "source": [
+    "# Modifying Map Key After Hashing\n",
+    "\n",
+    "This kind of thing is why Python only does hashing on immutable built-in collections.\n",
+    "\n",
+    "The hash of an object via `hashCode()` is used at the time a key-value pair is inserted into the map.  If the object is modified after that, and then used for lookup, it won't find the same mapping. The old value can be stuck in there - not retrievable even with a new key that looks like the old key - because it will do `.equals()` with the modified key but still use the hash of the key in its previous state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a5ee1be9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "null\n",
+      "{[1, 2, 3, 4, 5, 6]=Hello, world!, [1, 2, 3, 4, 5, 6]=Uh oh!}\n",
+      "null\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "\n",
+    "class DataLossDemo {\n",
+    "    public static void main() {\n",
+    "        List<Integer> key = new ArrayList(List.of(1, 2, 3, 4, 5));\n",
+    "        Map<List<Integer>, String> map = new HashMap();\n",
+    "        \n",
+    "        map.put(key, \"Hello, world!\"); // hashed from 1, 2, 3, 4, 5\n",
+    "        key.add(6);\n",
+    "        System.out.println(map.get(key)); // retrieval fails because wrong key now\n",
+    "        map.put(key, \"Uh oh!\"); // new key used to insert new value (doesn't overwrite)\n",
+    "        System.out.println(map); // both show up as same key, but one is lost inside!\n",
+    "        \n",
+    "        List<Integer> key2 = new ArrayList(List.of(1, 2, 3, 4, 5));\n",
+    "        System.out.println(map.get(key2));\n",
+    "    }\n",
+    "}\n",
+    "DataLossDemo.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2f9c248",
+   "id": "6abb4c3c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3208,7 +3257,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "20.0.1+9-29"
+   "version": "21.0.1+12-29"
   }
  },
  "nbformat": 4,
