--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -2638,9 +2638,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d7a5cef",
+   "metadata": {},
+   "source": [
+    "# Recursive Lambdas\n",
+    "\n",
+    "Although there is a (ugly) way to do recursive lambdas, the scripting language way of using the variable the lambda is being assigned to as the function to call from within the lambda does not work in Java."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08f7aba6",
+   "id": "a21fd50a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2658,7 +2668,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "20.0.1+9-29"
+   "version": "21.0.1+12-29"
   }
  },
  "nbformat": 4,
