--- a/java/Operators.ipynb
+++ b/java/Operators.ipynb
@@ -900,9 +900,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac0bda53",
+   "metadata": {},
+   "source": [
+    "# Modulo and Integer Division with Negative Numbers\n",
+    "\n",
+    "Java does what a lot of other languages do, including C++ and JS (but different from Python).\n",
+    "\n",
+    "`/` is truncation __towards zero__ while `Math.floor()` is truncation __towards negative infinity__.\n",
+    "\n",
+    "`%` keeps the sign on the numerator (operating on the magnitude first) and throws away the sign on the denominator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1465e0e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/\n",
+      "\n",
+      "1\n",
+      "1.0\n",
+      "\n",
+      "-1\n",
+      "-2.0\n",
+      "\n",
+      "-1\n",
+      "1\n",
+      "\n",
+      "%\n",
+      "\n",
+      "1\n",
+      "-1\n",
+      "1\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ModuloDemo {\n",
+    "    public static void main() {\n",
+    "        System.out.println(\"/\");\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        System.out.println(6 / 5);\n",
+    "        System.out.println(Math.floor(6.0 / 5));\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        System.out.println(-6 / 5);\n",
+    "        System.out.println(Math.floor(-6.0 / 5));\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        System.out.println(6 / -5);\n",
+    "        System.out.println(-6 / -5);\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        System.out.println(\"%\");\n",
+    "        System.out.println();\n",
+    "        \n",
+    "        System.out.println(6 % 5);\n",
+    "        System.out.println(-6 % 5);\n",
+    "        System.out.println(6 % -5);\n",
+    "        System.out.println(-6 % -5);\n",
+    "    }\n",
+    "}\n",
+    "ModuloDemo.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23bc764b",
+   "id": "d0993689",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -920,7 +994,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "20.0.1+9-29"
+   "version": "21.0.1+12-29"
   }
  },
  "nbformat": 4,
