--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -1729,9 +1729,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "68477143",
+   "metadata": {},
+   "source": [
+    "# Implicit String Concatenation\n",
+    "\n",
+    "This is a feature of some languages, but not Java!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6d0f68bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        String s = \"Hello, \"\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30m \"world!\"; // ILLEGAL\u001b[0m",
+      "\u001b[1m\u001b[31m';' expected\u001b[0m",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "class ConcatDemo {\n",
+    "    public static void main() {\n",
+    "        String s = \"Hello, \" \"world!\"; // ILLEGAL\n",
+    "        System.out.println(s);\n",
+    "    }\n",
+    "}\n",
+    "ConcatDemo.main();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a998e851",
+   "id": "a3e402e3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1749,7 +1786,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "20.0.1+9-29"
+   "version": "21.0.1+12-29"
   }
  },
  "nbformat": 4,
