Python + JS string literal concat behavior.

--- a/python/Collections Tips.ipynb
+++ b/python/Collections Tips.ipynb
@@ -1187,9 +1187,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "87fc178e",
+   "metadata": {},
+   "source": [
+    "# Implicit String Literal Concatenation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ce428a0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hithere\n",
+      "abc\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hi\" \"there\")\n",
+    "s = \"a\" \"b\" \\\n",
+    "\"c\"\n",
+    "print(s)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0995ab6e",
+   "id": "6ae76961",
    "metadata": {},
    "outputs": [],
    "source": []
