--- a/typescript/Strings and Printing.ipynb
+++ b/typescript/Strings and Printing.ipynb
@@ -1030,9 +1030,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8648a6e3",
+   "metadata": {},
+   "source": [
+    "# Implicit String Literal Concatenation\n",
+    "\n",
+    "__Not supported__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f7c05859",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Line 2, Character 17\n    let s = \"a\" \"b\" \"c\";\n________________^\nTS1005: ',' expected.\n\nLine 2, Character 21\n    let s = \"a\" \"b\" \"c\";\n____________________^\nTS1005: ';' expected.",
+     "output_type": "error",
+     "traceback": [
+      "Error: Line 2, Character 17",
+      "    let s = \"a\" \"b\" \"c\";",
+      "________________^",
+      "TS1005: ',' expected.",
+      "",
+      "Line 2, Character 21",
+      "    let s = \"a\" \"b\" \"c\";",
+      "____________________^",
+      "TS1005: ';' expected.",
+      "    at execTranspile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
+      "    at Session.transpiler [as transpile] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
+      "    at Session._runNow (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
+      "    at Session._run (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
+      "    at Session.execute (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
+      "    at Kernel.execute_request (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
+      "    at Kernel.onShellMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
+      "    at Socket.<anonymous> (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
+      "    at Socket.emit (node:events:511:28)",
+      "    at Socket._emitMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    let s = \"a\" \"b\" \"c\";\n",
+    "    console.log(s);\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "289dcaaf",
+   "id": "8cd58e45",
    "metadata": {},
    "outputs": [],
    "source": []
