Adding note about methods of literals in Python.

--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -2042,9 +2042,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02bbb27e",
+   "metadata": {},
+   "source": [
+    "# Methods on Literals\n",
+    "\n",
+    "Unlike in JS where literals can't have methods called because it disrupts the autoboxing, in Python, even literals act like objects.  However, there is a caveat that adding `.` after a number to call a method is ambiguous with a floating point literal and thus won't work unless you put `()` around the number or something like that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ba3a4169",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "<method-wrapper '__lt__' of str object at 0x104a42cf0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(3.__str__()) # only illegal because the dot tries to be a float\n",
+    "print((3).__str__())\n",
+    "print('hi'.__lt__)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a92148b",
+   "id": "d776cfd5",
    "metadata": {},
    "outputs": [],
    "source": []
