Adding explanation of self.wait.

--- a/manim/04 - Animations.ipynb
+++ b/manim/04 - Animations.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "01a37c68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.17.2</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.17.3</span>\n",
        "\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m17.2\u001b[0m\n",
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m17.3\u001b[0m\n",
        "\n"
       ]
      },
@@ -27,7 +27,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3285b68b",
    "metadata": {},
@@ -76,7 +75,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b87d7785",
    "metadata": {},
@@ -122,7 +120,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b9b035eb",
    "metadata": {},
@@ -170,7 +167,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "55558f36",
    "metadata": {},
@@ -216,7 +212,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cc9ec3ab",
    "metadata": {},
@@ -265,7 +260,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c55e6c86",
    "metadata": {},
@@ -338,7 +332,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e432d153",
    "metadata": {},
@@ -391,7 +384,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9e9086c9",
    "metadata": {},
@@ -441,7 +433,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "49214cd4",
    "metadata": {},
@@ -493,9 +484,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a396491",
+   "metadata": {},
+   "source": [
+    "## Wait\n",
+    "\n",
+    "`self.wait` is just a delay (like `sleep()` in Python, but for animation).  The default duration is `1.0` seconds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cd32ec6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/Waiting@2024-11-12@22-38-25.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%manim -v WARNING -qm Waiting\n",
+    "\n",
+    "class Waiting(Scene):\n",
+    "    def construct(self):\n",
+    "        triangle = Triangle()\n",
+    "        square = Square()\n",
+    "        dot = Dot()\n",
+    "        self.add(triangle)\n",
+    "        self.wait()\n",
+    "        self.add(square)\n",
+    "        self.wait(duration=3.0)\n",
+    "        self.add(dot)\n",
+    "        self.wait()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24f6dd20",
+   "id": "f670cf7f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -517,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
