Clarifying further on animations.

--- a/manim/04 - Animations.ipynb
+++ b/manim/04 - Animations.ipynb
@@ -583,7 +583,7 @@
     "\n",
     " * the `construct` method of the scene is the high-level flow\n",
     "   * don't confuse it with something like an animation loop\n",
-    "   * no animation happens until you call a method like `self.play()` or `self.animation.*`\n",
+    "   * no animation happens until you call a method like `self.play()` or `self.animation.*` or `self.wait()`\n",
     "   * in between those calls, nothing happens in the video (no frames) - but calculations can be done\n",
     "   * the resulting video is the accumulative of all those calls, no matter what happened in between\n",
     "   * NOTE: the code in `construct` affects your render time, but only animations affect video timing\n",
