Adding misc. notes from 3blue1brown video.

--- a/manim/03 - Mobjects.ipynb
+++ b/manim/03 - Mobjects.ipynb
@@ -1014,14 +1014,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7415b7e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<video src=\"media/jupyter/Grouping@2024-11-13@10-35-18.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "<video src=\"media/jupyter/Grouping@2024-11-13@13-51-06.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -1040,7 +1040,8 @@
     "    def construct(self):\n",
     "        self.add(VGroup(Circle(), Circle()).arrange(DOWN)) # V means vector (not vertical)\n",
     "        \n",
-    "        group2 = VGroup(Square().shift(LEFT*4), Square().shift(LEFT*2))  # Group can be moved as a unit\n",
+    "        group2 = VGroup(Square().shift(LEFT*4))  # Group can be moved as a unit\n",
+    "        group2.add(Square().shift(LEFT*2)) # members can be added to the group after construction\n",
     "        group2.shift(UP*3)\n",
     "        \n",
     "        group3 = Group(Dot())  # Non-vector objects can be in the more generic Group instead of VGroup\n",
