--- a/manim/04 - Animations.ipynb
+++ b/manim/04 - Animations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "01a37c68",
    "metadata": {},
    "outputs": [
@@ -121,6 +121,73 @@
   },
   {
    "cell_type": "markdown",
+   "id": "05864d1f",
+   "metadata": {},
+   "source": [
+    "## Text Write-On\n",
+    "\n",
+    "NOTE: this is supposed to work but I can't create `Text()` objects on my system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "58f42342",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Argument 'size' has incorrect type (expected int, got float)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mget_ipython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_cell_magic\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmanim\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m-v WARNING -qm TextWrite\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43mclass TextWrite(Scene):\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m    def construct(self):\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m        self.play(Write(Text(\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHello\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m, font_size=144)))\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniforge3/envs/ai/lib/python3.10/site-packages/IPython/core/interactiveshell.py:2478\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2476\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2477\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2478\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2480\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2481\u001b[0m \u001b[38;5;66;03m# when using magics with decodator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2482\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2483\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[0;32m~/miniforge3/envs/ai/lib/python3.10/site-packages/manim/utils/ipython_magic.py:141\u001b[0m, in \u001b[0;36mManimMagic.manim\u001b[0;34m(self, line, cell, local_ns)\u001b[0m\n\u001b[1;32m    139\u001b[0m     SceneClass \u001b[38;5;241m=\u001b[39m local_ns[config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscene_names\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;241m0\u001b[39m]]\n\u001b[1;32m    140\u001b[0m     scene \u001b[38;5;241m=\u001b[39m SceneClass(renderer\u001b[38;5;241m=\u001b[39mrenderer)\n\u001b[0;32m--> 141\u001b[0m     \u001b[43mscene\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    142\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    143\u001b[0m     \u001b[38;5;66;03m# Shader cache becomes invalid as the context is destroyed\u001b[39;00m\n\u001b[1;32m    144\u001b[0m     shader_program_cache\u001b[38;5;241m.\u001b[39mclear()\n",
+      "File \u001b[0;32m~/miniforge3/envs/ai/lib/python3.10/site-packages/manim/scene/scene.py:223\u001b[0m, in \u001b[0;36mScene.render\u001b[0;34m(self, preview)\u001b[0m\n\u001b[1;32m    221\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msetup()\n\u001b[1;32m    222\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 223\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconstruct\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    224\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m EndSceneEarlyException:\n\u001b[1;32m    225\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "File \u001b[0;32m<string>:4\u001b[0m, in \u001b[0;36mconstruct\u001b[0;34m(self)\u001b[0m\n",
+      "File \u001b[0;32m~/miniforge3/envs/ai/lib/python3.10/site-packages/manim/mobject/text/text_mobject.py:486\u001b[0m, in \u001b[0;36mText.__init__\u001b[0;34m(self, text, fill_opacity, stroke_width, color, font_size, line_spacing, font, slant, weight, t2c, t2f, t2g, t2s, t2w, gradient, tab_width, warn_missing_font, height, width, should_center, disable_ligatures, **kwargs)\u001b[0m\n\u001b[1;32m    483\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mline_spacing \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_font_size \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_font_size \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mline_spacing\n\u001b[1;32m    485\u001b[0m color \u001b[38;5;241m=\u001b[39m Color(color) \u001b[38;5;28;01mif\u001b[39;00m color \u001b[38;5;28;01melse\u001b[39;00m VMobject()\u001b[38;5;241m.\u001b[39mcolor\n\u001b[0;32m--> 486\u001b[0m file_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_text2svg\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcolor\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    487\u001b[0m PangoUtils\u001b[38;5;241m.\u001b[39mremove_last_M(file_name)\n\u001b[1;32m    488\u001b[0m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\n\u001b[1;32m    489\u001b[0m     file_name,\n\u001b[1;32m    490\u001b[0m     fill_opacity\u001b[38;5;241m=\u001b[39mfill_opacity,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    496\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs,\n\u001b[1;32m    497\u001b[0m )\n",
+      "File \u001b[0;32m~/miniforge3/envs/ai/lib/python3.10/site-packages/manim/mobject/text/text_mobject.py:814\u001b[0m, in \u001b[0;36mText._text2svg\u001b[0;34m(self, color)\u001b[0m\n\u001b[1;32m    811\u001b[0m     width \u001b[38;5;241m=\u001b[39m config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpixel_width\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    812\u001b[0m     height \u001b[38;5;241m=\u001b[39m config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpixel_height\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m--> 814\u001b[0m     svg_file \u001b[38;5;241m=\u001b[39m \u001b[43mmanimpango\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext2svg\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    815\u001b[0m \u001b[43m        \u001b[49m\u001b[43msettings\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    816\u001b[0m \u001b[43m        \u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    817\u001b[0m \u001b[43m        \u001b[49m\u001b[43mline_spacing\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    818\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdisable_ligatures\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    819\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_name\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    820\u001b[0m \u001b[43m        \u001b[49m\u001b[43mSTART_X\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    821\u001b[0m \u001b[43m        \u001b[49m\u001b[43mSTART_Y\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    822\u001b[0m \u001b[43m        \u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    823\u001b[0m \u001b[43m        \u001b[49m\u001b[43mheight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    824\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    825\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    827\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m svg_file\n",
+      "\u001b[0;31mTypeError\u001b[0m: Argument 'size' has incorrect type (expected int, got float)"
+     ]
+    }
+   ],
+   "source": [
+    "%%manim -v WARNING -qm TextWrite\n",
+    "\n",
+    "class TextWrite(Scene):\n",
+    "    def construct(self):\n",
+    "        self.play(Write(Text(\"Hello\", font_size=144)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "084c08ad",
+   "metadata": {},
+   "source": [
+    "## Animating Characters in Text\n",
+    "\n",
+    "You should be able to index characters within text and use them as shapes for transformations.\n",
+    "`Transform(text[\"H\"][0], circle)`\n",
+    "\n",
+    "NOTE: this is supposed to work but I can't create `Text()` objects on my system."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a11ad4e",
+   "metadata": {},
+   "source": [
+    "## Anagrams\n",
+    "\n",
+    "`TransformMatchingShapes()` can transform 1 string into another with shapes (letters) that match getting moved instead of morphed/replaced."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b9b035eb",
    "metadata": {},
    "source": [
@@ -171,7 +238,9 @@
    "id": "55558f36",
    "metadata": {},
    "source": [
-    "## Animation Timing\n"
+    "## Animation Timing\n",
+    "\n",
+    "Animations default to 1 second with easing, but you can override both of these things."
    ]
   },
   {
@@ -216,7 +285,9 @@
    "id": "cc9ec3ab",
    "metadata": {},
    "source": [
-    "## Updater\n"
+    "## Updater\n",
+    "\n",
+    "This is useful for things like having a dot follow a curve as its drawn!"
    ]
   },
   {
@@ -572,6 +643,117 @@
     "        triangle.move_to(LEFT*3)  # transform happens before shown, so original never seen\n",
     "        self.wait()\n",
     "        triangle.move_to(RIGHT*3)  # this is never seen because no animation is played"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d940b08f",
+   "metadata": {},
+   "source": [
+    "## Controlling Durations\n",
+    "\n",
+    "Durations can be specified on multiple levels, but ultimately, if specified on a higher level, that __overrides the lower level__.\n",
+    "\n",
+    "If multiple animations play in __parallel__ without a higher-level override, they all play for their __specified amounts__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c21ceacb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/Durations@2024-11-13@13-59-13.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%manim -v WARNING -qm Durations\n",
+    "\n",
+    "class Durations(Scene):\n",
+    "    def construct(self):\n",
+    "        circle = Circle()\n",
+    "        \n",
+    "        # the self.play() versions are used in all these cases\n",
+    "        self.play(FadeIn(circle), run_time=3)\n",
+    "        self.play(FadeOut(circle), run_time=1)\n",
+    "        self.play(FadeIn(circle, run_time=5), run_time=1)\n",
+    "        self.play(FadeOut(circle, run_time=1), run_time=5)\n",
+    "        \n",
+    "        # parallel animations\n",
+    "        self.play(FadeIn(circle, run_time=1), FadeIn(Square(), run_time=5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eddb8ff7",
+   "metadata": {},
+   "source": [
+    "## Parallel Animations\n",
+    "\n",
+    "Many methods, including `self.play()` and constructors for animations take __multiple positional arguments__ allowing for parallelism.\n",
+    "\n",
+    "NOTE: this makes it flexible for use with collections, generators, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c300303f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/Parallel@2024-11-13@14-04-56.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%manim -v WARNING -qm Parallel\n",
+    "\n",
+    "class Parallel(Scene):\n",
+    "    def construct(self):\n",
+    "        circle = Circle()\n",
+    "        square = Square()\n",
+    "        shapes = [circle, square]\n",
+    "        \n",
+    "        self.play(FadeIn(circle), FadeIn(square))\n",
+    "        self.play(FadeOut(*shapes))\n",
+    "        self.play(*(FadeIn(circle), FadeIn(square)))"
    ]
   },
   {
