Adding animation clarifications.

--- a/manim/04 - Animations.ipynb
+++ b/manim/04 - Animations.ipynb
@@ -531,9 +531,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11b36cf0",
+   "metadata": {},
+   "source": [
+    "## Timing of Animation Frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "509d12f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/Timing@2024-11-13@10-55-32.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%manim -v WARNING -qm Timing\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "class Timing(Scene):\n",
+    "    def construct(self):\n",
+    "        triangle = Triangle()\n",
+    "        self.add(triangle)    # nothing shown yet\n",
+    "        time.sleep(2)         # 2 second delay before anything shown\n",
+    "        triangle.move_to(LEFT*3)  # transform happens before shown, so original never seen\n",
+    "        self.wait()\n",
+    "        triangle.move_to(RIGHT*3)  # this is never seen because no animation is played"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f29f38c",
+   "metadata": {},
+   "source": [
+    "## Conceptual Summary of Animation\n",
+    "\n",
+    " * the `construct` method of the scene is the high-level flow\n",
+    "   * don't confuse it with something like an animation loop\n",
+    "   * no animation happens until you call a method like `self.play()` or `self.animation.*`\n",
+    "   * in between those calls, nothing happens in the video (no frames) - but calculations can be done\n",
+    "   * the resulting video is the accumulative of all those calls, no matter what happened in between\n",
+    "   * NOTE: the code in `construct` affects your render time, but only animations affect video timing\n",
+    " * shapes are math objects with state and thus can be used independently of the animation\n",
+    "   * eg. can have a circle that is not added to the scene and use that as a path for other shapes to move on\n",
+    "   * keep in mind that if you animate property changes for them, the math object is changed\n",
+    " * operations on objects change the underlying mathematical object instantaneously\n",
+    "   * if it's already added to the scene, it will instantly change in the scene\n",
+    "   * if no animation happened in between, the first state will not be seen\n",
+    " * animation objects or chained animation calls change the math object in a way that is visible in the scene (with timing)\n",
+    "   * as opposed to just changing the properties directly, which changes the math object instantly and doesn't display yet\n",
+    " * animation calls are __synchronous__\n",
+    "   * you can do parallel animations by passing multiple into `self.play`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f670cf7f",
+   "id": "9a3cc615",
    "metadata": {},
    "outputs": [],
    "source": []
