Adding notes about cloning

--- a/manim/03 - Mobjects.ipynb
+++ b/manim/03 - Mobjects.ipynb
@@ -1081,6 +1081,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ec088d94",
+   "metadata": {},
+   "source": [
+    "## Cloning Objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dae02702",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"media/jupyter/Copying@2024-11-13@11-08-28.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%manim -v WARNING -qm Copying\n",
+    "\n",
+    "class Copying(Scene):    \n",
+    "    def construct(self):\n",
+    "        circle = Circle()\n",
+    "        self.add(circle)\n",
+    "        \n",
+    "        circle = circle.copy()  # deep copy\n",
+    "        self.add(circle)\n",
+    "        circle.move_to(LEFT)  # original unaffected\n",
+    "        \n",
+    "        self.wait()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "982916d6",
    "metadata": {},
    "source": [
